package com.Composition.File;

public class File {
    private String name;

    public File(String name) {
        this.name = name;
    }

    public void setName(String name) {
        this.name = name;
    }

    public String getName() {
        return name;
    }

    public void printFile() {
        System.out.println("File: " + this.name);
    }
}
